# tree-sitter-minizinc

./: .gitignore  Cargo.toml  README.md
bindings/rust/: lib.rs
